--- a/config/AIO.ini
+++ b/config/AIO.ini
@@ -1,34 +1,34 @@
 [custom]
-ruleset=全球直连,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/custom.list
-ruleset=节点选择,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/customProxy.list
+ruleset=全球直连,https://raw.gitmirror.com/JohnsonRan/CRules/master/lists/custom.list
+ruleset=节点选择,https://raw.gitmirror.com/JohnsonRan/CRules/master/lists/customProxy.list
 ruleset=广告拦截,[]GEOSITE,category-ads-all
-ruleset=广告拦截,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/reject.list
+ruleset=广告拦截,https://raw.gitmirror.com/JohnsonRan/CRules/master/lists/reject.list
 ruleset=苹果服务,[]GEOSITE,apple-cn
-ruleset=油管视频,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
+ruleset=油管视频,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
 ruleset=谷歌服务,[]GEOIP,GOOGLE,no-reslove
-ruleset=谷歌服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
+ruleset=谷歌服务,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
 ruleset=Netflix,[]GEOIP,NETFLIX,no-reslove
-ruleset=Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
-ruleset=Discord,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Discord/Discord.list
-ruleset=Steam,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Games/Steam.list
-ruleset=Xbox,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Xbox/Xbox.list
-ruleset=游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Origin/Origin.list
-ruleset=游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Epic/Epic.list
-ruleset=游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Battle/Battle.list
-ruleset=游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Sony/Sony.list
-ruleset=PrimeVideo,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AmazonPrimeVideo/AmazonPrimeVideo.list
-ruleset=DisneyPlus,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Disney/Disney.list
-ruleset=Porns,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Video/Pornhub.list
+ruleset=Netflix,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
+ruleset=Discord,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Clash/Discord/Discord.list
+ruleset=Steam,https://raw.gitmirror.com/JohnsonRan/CRules/master/lists/Games/Steam.list
+ruleset=Xbox,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Clash/Xbox/Xbox.list
+ruleset=游戏平台,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Clash/Origin/Origin.list
+ruleset=游戏平台,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Clash/Epic/Epic.list
+ruleset=游戏平台,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Clash/Battle/Battle.list
+ruleset=游戏平台,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Clash/Sony/Sony.list
+ruleset=PrimeVideo,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Clash/AmazonPrimeVideo/AmazonPrimeVideo.list
+ruleset=DisneyPlus,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Clash/Disney/Disney.list
+ruleset=Porns,https://raw.gitmirror.com/JohnsonRan/CRules/master/lists/Video/Pornhub.list
 ruleset=Porns,[]GEOSITE,category-porn
-ruleset=Bilibili,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Video/Bilibili.list
-ruleset=Telegram,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Telegram.list
+ruleset=Bilibili,https://raw.gitmirror.com/JohnsonRan/CRules/master/lists/Video/Bilibili.list
+ruleset=Telegram,https://raw.gitmirror.com/JohnsonRan/CRules/master/lists/Telegram.list
 ruleset=Telegram,[]GEOIP,TELEGRAM,no-reslove
-ruleset=微软服务,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Microsoft.list
-ruleset=OneDrive,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OneDrive/OneDrive.list
-ruleset=巴哈姆特,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bahamut/Bahamut.list
-ruleset=Tiktok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list
-ruleset=Github,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.list
-ruleset=国外媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.list
+ruleset=微软服务,https://raw.gitmirror.com/JohnsonRan/CRules/master/lists/Microsoft.list
+ruleset=OneDrive,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Clash/OneDrive/OneDrive.list
+ruleset=巴哈姆特,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bahamut/Bahamut.list
+ruleset=Tiktok,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list
+ruleset=Github,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.list
+ruleset=国外媒体,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.list
 ruleset=节点选择,[]GEOSITE,gfw
 ruleset=全球直连,[]GEOIP,CN,no-reslove
 ruleset=全球直连,[]GEOSITE,cn
@@ -81,4 +81,4 @@ custom_proxy_group=印度节点`url-test`(印|India)`https://1.1.1.1/generate_20
 enable_rule_generator=true
 overwrite_original_rules=true
 
-clash_rule_base=https://raw.githubusercontent.com/JohnsonRan/CRules/master/config/GeneralClashConfig.yml
+clash_rule_base=https://raw.gitmirror.com/JohnsonRan/CRules/master/config/GeneralClashConfig.yml
