--- a/config/AIO.ini
+++ b/config/AIO.ini
@@ -1,6 +1,6 @@
 [custom]
 ruleset=全球直连,https://raw.gitmirror.com/JohnsonRan/CRules/master/lists/custom.list
-ruleset=节点选择,https://raw.gitmirror.com/JohnsonRan/CRules/master/lists/customProxy.list
+ruleset=故障转移,https://raw.gitmirror.com/JohnsonRan/CRules/master/lists/customProxy.list
 ruleset=广告拦截,[]GEOSITE,category-ads-all
 ruleset=广告拦截,https://raw.gitmirror.com/JohnsonRan/CRules/master/lists/reject.list
 ruleset=苹果服务,[]GEOSITE,apple-cn
@@ -29,54 +29,34 @@ ruleset=巴哈姆特,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/mast
 ruleset=Tiktok,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list
 ruleset=Github,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.list
 ruleset=国外媒体,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.list
-ruleset=节点选择,[]GEOSITE,gfw
+ruleset=故障转移,[]GEOSITE,gfw
 ruleset=全球直连,[]GEOIP,CN,no-reslove
 ruleset=全球直连,[]GEOSITE,cn
 ruleset=漏网之鱼,[]MATCH
 
-custom_proxy_group=节点选择`select`[]故障转移`[]自动选择`[]香港节点`[]日本节点`[]台湾节点`[]狮城节点`[]美国节点`[]手动切换`[]DIRECT
-custom_proxy_group=手动切换`select`.*
-custom_proxy_group=自动选择`url-test`.*`https://1.1.1.1/generate_204`300,,50
 custom_proxy_group=故障转移`fallback`.*`https://1.1.1.1/generate_204`300,,50
-custom_proxy_group=Github`select`[]节点选择`[]自动选择`[]狮城节点`[]香港节点`[]台湾节点`[]日本节点`[]美国节点`[]韩国节点`[]手动切换`[]DIRECT
-custom_proxy_group=Telegram`select`[]节点选择`[]自动选择`[]狮城节点`[]香港节点`[]台湾节点`[]日本节点`[]美国节点`[]韩国节点`[]手动切换`[]DIRECT
-custom_proxy_group=谷歌服务`select`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]韩国节点`[]手动切换`[]DIRECT
-custom_proxy_group=油管视频`select`[]节点选择`[]自动选择`[]狮城节点`[]香港节点`[]台湾节点`[]日本节点`[]美国节点`[]韩国节点`[]手动切换`[]DIRECT
-custom_proxy_group=Netflix`select`[]节点选择`[]自动选择`[]狮城节点`[]香港节点`[]台湾节点`[]日本节点`[]美国节点`[]韩国节点`[]手动切换`[]DIRECT
-custom_proxy_group=PrimeVideo`select`[]节点选择`[]自动选择`[]狮城节点`[]香港节点`[]台湾节点`[]日本节点`[]美国节点`[]韩国节点`[]手动切换`[]DIRECT
-custom_proxy_group=DisneyPlus`select`[]节点选择`[]自动选择`[]狮城节点`[]香港节点`[]台湾节点`[]日本节点`[]美国节点`[]韩国节点`[]手动切换`[]DIRECT
-custom_proxy_group=Porns`select`[]节点选择`[]自动选择`[]狮城节点`[]香港节点`[]台湾节点`[]日本节点`[]美国节点`[]韩国节点`[]手动切换`[]DIRECT
-custom_proxy_group=Bilibili`select`[]DIRECT`[]香港节点`[]台湾节点`[]泰国节点
-custom_proxy_group=巴哈姆特`select`[]台湾节点`[]节点选择`[]手动切换`[]DIRECT
-custom_proxy_group=微软服务`select`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]韩国节点`[]手动切换`[]DIRECT
-custom_proxy_group=OneDrive`select`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]韩国节点`[]手动切换`[]DIRECT
-custom_proxy_group=Tiktok`select`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]韩国节点`[]俄罗斯节点`[]手动切换`[]DIRECT
-custom_proxy_group=国外媒体`select`[]节点选择`[]自动选择`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]韩国节点`[]手动切换`[]DIRECT
-custom_proxy_group=Discord`select`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]韩国节点`[]手动切换`[]DIRECT
-custom_proxy_group=苹果服务`select`[]DIRECT`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]韩国节点`[]手动切换
-custom_proxy_group=游戏平台`select`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]韩国节点`[]俄罗斯节点`[]手动切换`[]DIRECT
-custom_proxy_group=Steam`select`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]俄罗斯节点`[]土耳其节点`[]阿根廷节点`[]手动切换`[]DIRECT
-custom_proxy_group=Xbox`select`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]俄罗斯节点`[]土耳其节点`[]手动切换`[]DIRECT
-custom_proxy_group=全球直连`select`[]DIRECT`[]节点选择`[]自动选择
+custom_proxy_group=Github`select`[]故障转移`.*`[]DIRECT
+custom_proxy_group=Telegram`select`[]故障转移`.*`[]DIRECT
+custom_proxy_group=谷歌服务`select`[]故障转移`.*`[]DIRECT
+custom_proxy_group=油管视频`select`[]故障转移`.*`[]DIRECT
+custom_proxy_group=Netflix`select`[]故障转移`.*`[]DIRECT
+custom_proxy_group=PrimeVideo`select`[]故障转移`.*`[]DIRECT
+custom_proxy_group=DisneyPlus`select`[]故障转移`.*`[]DIRECT
+custom_proxy_group=Porns`select`[]故障转移`.*`[]DIRECT
+custom_proxy_group=Bilibili`select`[]DIRECT`[]故障转移`.*
+custom_proxy_group=巴哈姆特`select`[]故障转移`.*`[]DIRECT
+custom_proxy_group=微软服务`select`[]故障转移`.*`[]DIRECT
+custom_proxy_group=OneDrive`select`[]故障转移`.*`[]DIRECT
+custom_proxy_group=Tiktok`select`[]故障转移`.*`[]DIRECT
+custom_proxy_group=国外媒体`select`[]故障转移`.*`[]DIRECT
+custom_proxy_group=Discord`select`[]故障转移`.*`[]DIRECT
+custom_proxy_group=苹果服务`select`[]DIRECT`[]故障转移`.*
+custom_proxy_group=游戏平台`select`[]故障转移`.*`[]DIRECT
+custom_proxy_group=Steam`select`[]故障转移`.*`[]DIRECT
+custom_proxy_group=Xbox`select`[]故障转移`.*`[]DIRECT
+custom_proxy_group=全球直连`select`[]DIRECT`[]故障转移
 custom_proxy_group=广告拦截`select`[]REJECT`[]DIRECT
-custom_proxy_group=漏网之鱼`select`[]节点选择`[]自动选择`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]韩国节点`[]手动切换`[]DIRECT
-custom_proxy_group=香港节点`url-test`(港|HK|Hong Kong)`https://1.1.1.1/generate_204`300,,50
-custom_proxy_group=日本节点`url-test`(日本|JP|Japan)`https://1.1.1.1/generate_204`300,,50
-custom_proxy_group=韩国节点`url-test`(KR|Korea|KOR|首尔|韩)`https://1.1.1.1/generate_204`300,,50
-custom_proxy_group=台湾节点`url-test`(台|新北|TW|Taiwan)`https://1.1.1.1/generate_204`300,,50
-custom_proxy_group=狮城节点`url-test`(新加坡|狮城|SG|Singapore)`https://1.1.1.1/generate_204`300,,50
-custom_proxy_group=马来西亚`url-test`(马|Malaysia)`https://1.1.1.1/generate_204`300,,50
-custom_proxy_group=泰国节点`url-test`(TH|泰)`https://1.1.1.1/generate_204`300,,50
-custom_proxy_group=越南节点`url-test`(越|Vietnam)`https://1.1.1.1/generate_204`300,,50
-custom_proxy_group=澳大利亚`url-test`(澳洲|澳大利亚|Australia)`https://1.1.1.1/generate_204`300,,50
-custom_proxy_group=美国节点`url-test`(美|US|United States)`https://1.1.1.1/generate_204`300,,150
-custom_proxy_group=俄罗斯节点`url-test`(RU|俄|俄罗斯)`https://1.1.1.1/generate_204`300,,50
-custom_proxy_group=加拿大节点`url-test`(加拿大|Canada)`https://1.1.1.1/generate_204`300,,50
-custom_proxy_group=英国节点`url-test`(英国|United Kingdom)`https://1.1.1.1/generate_204`300,,50
-custom_proxy_group=德国节点`url-test`(德|德意志|Germany)`https://1.1.1.1/generate_204`300,,50
-custom_proxy_group=土耳其节点`url-test`(TR|土|土耳其)`https://1.1.1.1/generate_204`300,,50
-custom_proxy_group=阿根廷节点`url-test`(阿根廷|Argentina)`https://1.1.1.1/generate_204`300,,50
-custom_proxy_group=印度节点`url-test`(印|India)`https://1.1.1.1/generate_204`300,,50
+custom_proxy_group=漏网之鱼`select`[]故障转移`.*`[]DIRECT
 
 enable_rule_generator=true
 overwrite_original_rules=true
