--- a/config/AIO.ini
+++ b/config/AIO.ini
@@ -5,9 +5,9 @@ ruleset=广告拦截,[]GEOSITE,category-ads-all
 ruleset=广告拦截,https://raw.gitmirror.com/JohnsonRan/CRules/master/lists/reject.list
 ruleset=苹果服务,[]GEOSITE,apple-cn
 ruleset=油管视频,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
-ruleset=谷歌服务,[]GEOIP,GOOGLE,no-reslove
+ruleset=谷歌服务,[]GEOIP,GOOGLE
 ruleset=谷歌服务,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
-ruleset=Netflix,[]GEOIP,NETFLIX,no-reslove
+ruleset=Netflix,[]GEOIP,NETFLIX
 ruleset=Netflix,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
 ruleset=Discord,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Clash/Discord/Discord.list
 ruleset=Steam,https://raw.gitmirror.com/JohnsonRan/CRules/master/lists/Games/Steam.list
@@ -22,7 +22,7 @@ ruleset=Porns,https://raw.gitmirror.com/JohnsonRan/CRules/master/lists/Video/Por
 ruleset=Porns,[]GEOSITE,category-porn
 ruleset=Bilibili,https://raw.gitmirror.com/JohnsonRan/CRules/master/lists/Video/Bilibili.list
 ruleset=Telegram,https://raw.gitmirror.com/JohnsonRan/CRules/master/lists/Telegram.list
-ruleset=Telegram,[]GEOIP,TELEGRAM,no-reslove
+ruleset=Telegram,[]GEOIP,TELEGRAM
 ruleset=微软服务,https://raw.gitmirror.com/JohnsonRan/CRules/master/lists/Microsoft.list
 ruleset=OneDrive,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Clash/OneDrive/OneDrive.list
 ruleset=巴哈姆特,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bahamut/Bahamut.list
@@ -30,33 +30,39 @@ ruleset=Tiktok,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rul
 ruleset=Github,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.list
 ruleset=国外媒体,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.list
 ruleset=故障转移,[]GEOSITE,gfw
-ruleset=全球直连,[]GEOIP,CN,no-reslove
+ruleset=全球直连,[]GEOIP,CN
 ruleset=全球直连,[]GEOSITE,cn
 ruleset=漏网之鱼,[]MATCH
 
-custom_proxy_group=故障转移`fallback`.*`https://1.1.1.1/generate_204`300,,50
-custom_proxy_group=Github`select`[]故障转移`.*`[]DIRECT
-custom_proxy_group=Telegram`select`[]故障转移`.*`[]DIRECT
-custom_proxy_group=谷歌服务`select`[]故障转移`.*`[]DIRECT
-custom_proxy_group=油管视频`select`[]故障转移`.*`[]DIRECT
-custom_proxy_group=Netflix`select`[]故障转移`.*`[]DIRECT
-custom_proxy_group=PrimeVideo`select`[]故障转移`.*`[]DIRECT
-custom_proxy_group=DisneyPlus`select`[]故障转移`.*`[]DIRECT
-custom_proxy_group=Porns`select`[]故障转移`.*`[]DIRECT
-custom_proxy_group=Bilibili`select`[]DIRECT`[]故障转移`.*
-custom_proxy_group=巴哈姆特`select`[]故障转移`.*`[]DIRECT
-custom_proxy_group=微软服务`select`[]故障转移`.*`[]DIRECT
-custom_proxy_group=OneDrive`select`[]故障转移`.*`[]DIRECT
-custom_proxy_group=Tiktok`select`[]故障转移`.*`[]DIRECT
-custom_proxy_group=国外媒体`select`[]故障转移`.*`[]DIRECT
-custom_proxy_group=Discord`select`[]故障转移`.*`[]DIRECT
-custom_proxy_group=苹果服务`select`[]DIRECT`[]故障转移`.*
-custom_proxy_group=游戏平台`select`[]故障转移`.*`[]DIRECT
-custom_proxy_group=Steam`select`[]故障转移`.*`[]DIRECT
-custom_proxy_group=Xbox`select`[]故障转移`.*`[]DIRECT
+custom_proxy_group=故障转移`fallback`.*`http://www.apple.com/library/test/success.html`300
+custom_proxy_group=Github`select`[]故障转移`[]香港节点`[]台湾节点`[]日本节点`[]韩国节点`[]狮城节点`[]美国节点`[]DIRECT
+custom_proxy_group=Telegram`select`[]故障转移`[]香港节点`[]台湾节点`[]日本节点`[]韩国节点`[]狮城节点`[]美国节点`[]DIRECT
+custom_proxy_group=谷歌服务`select`[]故障转移`[]香港节点`[]台湾节点`[]日本节点`[]韩国节点`[]狮城节点`[]美国节点`[]DIRECT
+custom_proxy_group=油管视频`select`[]故障转移`[]香港节点`[]台湾节点`[]日本节点`[]韩国节点`[]狮城节点`[]美国节点`[]DIRECT
+custom_proxy_group=Netflix`select`[]故障转移`[]香港节点`[]台湾节点`[]日本节点`[]韩国节点`[]狮城节点`[]美国节点`[]DIRECT
+custom_proxy_group=PrimeVideo`select`[]故障转移`[]香港节点`[]台湾节点`[]日本节点`[]韩国节点`[]狮城节点`[]美国节点`[]DIRECT
+custom_proxy_group=DisneyPlus`select`[]故障转移`[]香港节点`[]台湾节点`[]日本节点`[]韩国节点`[]狮城节点`[]美国节点`[]DIRECT
+custom_proxy_group=Porns`select`[]故障转移`[]香港节点`[]台湾节点`[]日本节点`[]韩国节点`[]狮城节点`[]美国节点`[]DIRECT
+custom_proxy_group=Bilibili`select`[]DIRECT`[]故障转移`[]香港节点`[]台湾节点`[]日本节点`[]韩国节点`[]狮城节点`[]美国节点
+custom_proxy_group=巴哈姆特`select`[]台湾节点`[]故障转移`[]香港节点`[]日本节点`[]韩国节点`[]狮城节点`[]美国节点`[]DIRECT
+custom_proxy_group=微软服务`select`[]故障转移`[]香港节点`[]台湾节点`[]日本节点`[]韩国节点`[]狮城节点`[]美国节点`[]DIRECT
+custom_proxy_group=OneDrive`select`[]故障转移`[]香港节点`[]台湾节点`[]日本节点`[]韩国节点`[]狮城节点`[]美国节点`[]DIRECT
+custom_proxy_group=Tiktok`select`[]故障转移`[]香港节点`[]台湾节点`[]日本节点`[]韩国节点`[]狮城节点`[]美国节点`[]DIRECT
+custom_proxy_group=国外媒体`select`[]故障转移`[]香港节点`[]台湾节点`[]日本节点`[]韩国节点`[]狮城节点`[]美国节点`[]DIRECT
+custom_proxy_group=Discord`select`[]故障转移`[]香港节点`[]台湾节点`[]日本节点`[]韩国节点`[]狮城节点`[]美国节点`[]DIRECT
+custom_proxy_group=苹果服务`select`[]DIRECT`[]故障转移`[]香港节点`[]台湾节点`[]日本节点`[]韩国节点`[]狮城节点`[]美国节点
+custom_proxy_group=游戏平台`select`[]故障转移`[]香港节点`[]台湾节点`[]日本节点`[]韩国节点`[]狮城节点`[]美国节点`[]DIRECT
+custom_proxy_group=Steam`select`[]故障转移`[]香港节点`[]台湾节点`[]日本节点`[]韩国节点`[]狮城节点`[]美国节点`[]DIRECT
+custom_proxy_group=Xbox`select`[]故障转移`[]香港节点`[]台湾节点`[]日本节点`[]韩国节点`[]狮城节点`[]美国节点`[]DIRECT
 custom_proxy_group=全球直连`select`[]DIRECT`[]故障转移
 custom_proxy_group=广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=漏网之鱼`select`[]故障转移`.*`[]DIRECT
+custom_proxy_group=香港节点`fallback`(港|HK|Hong Kong)`http://www.apple.com/library/test/success.html`300
+custom_proxy_group=台湾节点`fallback`(台|新北|TW|Taiwan)`http://www.apple.com/library/test/success.html`300
+custom_proxy_group=日本节点`fallback`(日本|JP|Japan)`http://www.apple.com/library/test/success.html`300
+custom_proxy_group=韩国节点`fallback`(KR|Korea|KOR|首尔|韩)`http://www.apple.com/library/test/success.html`300
+custom_proxy_group=狮城节点`fallback`(新加坡|狮城|SG|Singapore)`http://www.apple.com/library/test/success.html`300
+custom_proxy_group=美国节点`fallback`(美|US|United States)`http://www.apple.com/library/test/success.html`300
 
 enable_rule_generator=true
 overwrite_original_rules=true
