--- a/config/AIO.ini
+++ b/config/AIO.ini
@@ -1,5 +1,6 @@
 [custom]
 ruleset=全球直连,https://raw.gitmirror.com/JohnsonRan/CRules/master/lists/custom.list
+ruleset=全球直连,[]GEOIP,PRIVATE,no-resolve
 ruleset=故障转移,https://raw.gitmirror.com/JohnsonRan/CRules/master/lists/customProxy.list
 ruleset=广告拦截,[]GEOSITE,category-ads-all
 ruleset=广告拦截,https://raw.gitmirror.com/JohnsonRan/CRules/master/lists/reject.list
