--- a/config/GeneralClashConfig.yml
+++ b/config/GeneralClashConfig.yml
@@ -7,9 +7,9 @@ bind-address: "*"
 ipv6: false
 mode: rule
 geox-url:
-  geoip: "https://github.com/Loyalsoldier/geoip/raw/release/geoip.dat"
-  geosite: "https://github.com/Loyalsoldier/v2ray-rules-dat/raw/release/geosite.dat"
-  mmdb: "https://github.com/Loyalsoldier/geoip/raw/release/Country.mmdb"
+  geoip: "https://raw.gitmirror.com/Loyalsoldier/geoip/release/geoip.dat"
+  geosite: "https://raw.gitmirror.com/Loyalsoldier/v2ray-rules-dat/release/geosite.dat"
+  mmdb: "https://raw.gitmirror.com/Loyalsoldier/geoip/release/Country.mmdb"
 log-level: warning
 external-controller: 0.0.0.0:9090
 global-client-fingerprint: chrome
