tracker use DIRECT

--- a/config/AIO.ini
+++ b/config/AIO.ini
@@ -1,6 +1,7 @@
 [custom]
 ruleset=全球直连,https://raw.gitmirror.com/JohnsonRan/CRules/master/lists/custom.list
 ruleset=全球直连,[]GEOIP,private,no-resolve
+ruleset=Tracker,[]GEOSITE,tracker
 ruleset=故障转移,https://raw.gitmirror.com/JohnsonRan/CRules/master/lists/customProxy.list
 ruleset=广告拦截,[]GEOSITE,category-ads-all
 ruleset=广告拦截,https://raw.gitmirror.com/JohnsonRan/CRules/master/lists/reject.list
@@ -16,7 +17,7 @@ ruleset=DisneyPlus,[]GEOSITE,disney
 ruleset=Porns,[]GEOSITE,category-porn
 ruleset=Bilibili,[]GEOSITE,bilibili
 ruleset=Telegram,[]GEOSITE,telegram
-ruleset=Telegram,[]GEOIP,TELEGRAM,no-resolve
+ruleset=Telegram,[]GEOIP,telegram,no-resolve
 ruleset=Github,[]GEOSITE,github
 ruleset=OneDrive,[]GEOSITE,onedrive
 ruleset=微软服务,[]GEOSITE,microsoft
@@ -30,6 +31,7 @@ custom_proxy_group=故障转移`fallback`.*`http://www.apple.com/library/test/su
 custom_proxy_group=Github`select`[]故障转移`[]香港节点`[]台湾节点`[]日本节点`[]韩国节点`[]狮城节点`[]美国节点`[]DIRECT
 custom_proxy_group=Telegram`select`[]故障转移`[]香港节点`[]台湾节点`[]日本节点`[]韩国节点`[]狮城节点`[]美国节点`[]DIRECT
 custom_proxy_group=谷歌服务`select`[]故障转移`[]香港节点`[]台湾节点`[]日本节点`[]韩国节点`[]狮城节点`[]美国节点`[]DIRECT
+custom_proxy_group=Tracker`select`[]DIRECT`[]故障转移`[]香港节点`[]台湾节点`[]日本节点`[]韩国节点`[]狮城节点`[]美国节点
 custom_proxy_group=油管视频`select`[]故障转移`[]香港节点`[]台湾节点`[]日本节点`[]韩国节点`[]狮城节点`[]美国节点`[]DIRECT
 custom_proxy_group=Netflix`select`[]故障转移`[]香港节点`[]台湾节点`[]日本节点`[]韩国节点`[]狮城节点`[]美国节点`[]DIRECT
 custom_proxy_group=PrimeVideo`select`[]故障转移`[]香港节点`[]台湾节点`[]日本节点`[]韩国节点`[]狮城节点`[]美国节点`[]DIRECT
