add biliintl & remove apple-cn

--- a/config/AIO.ini
+++ b/config/AIO.ini
@@ -2,10 +2,10 @@
 ruleset=全球直连,https://raw.gitmirror.com/JohnsonRan/CRules/master/lists/custom.list
 ruleset=全球直连,[]GEOIP,private,no-resolve
 ruleset=Tracker,[]GEOSITE,tracker
+ruleset=故障转移,[]GEOSITE,biliintl
 ruleset=故障转移,https://raw.gitmirror.com/JohnsonRan/CRules/master/lists/customProxy.list
 ruleset=广告拦截,[]GEOSITE,category-ads-all
 ruleset=广告拦截,https://raw.gitmirror.com/JohnsonRan/CRules/master/lists/reject.list
-ruleset=苹果服务,[]GEOSITE,apple-cn
 ruleset=油管视频,[]GEOSITE,youtube
 ruleset=谷歌服务,[]GEOIP,google
 ruleset=谷歌服务,[]GEOSITE,google
@@ -42,7 +42,6 @@ custom_proxy_group=巴哈姆特`select`[]台湾节点`[]故障转移`[]香港节
 custom_proxy_group=微软服务`select`[]故障转移`[]香港节点`[]台湾节点`[]日本节点`[]韩国节点`[]狮城节点`[]美国节点`[]DIRECT
 custom_proxy_group=OneDrive`select`[]故障转移`[]香港节点`[]台湾节点`[]日本节点`[]韩国节点`[]狮城节点`[]美国节点`[]DIRECT
 custom_proxy_group=Discord`select`[]故障转移`[]香港节点`[]台湾节点`[]日本节点`[]韩国节点`[]狮城节点`[]美国节点`[]DIRECT
-custom_proxy_group=苹果服务`select`[]DIRECT`[]故障转移`[]香港节点`[]台湾节点`[]日本节点`[]韩国节点`[]狮城节点`[]美国节点
 custom_proxy_group=全球直连`select`[]DIRECT`[]故障转移
 custom_proxy_group=广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=漏网之鱼`select`[]故障转移`.*`[]DIRECT
