--- a/config/AIO.yaml
+++ b/config/AIO.yaml
@@ -28,6 +28,8 @@ profile:
 
 sniffer:
   enable: true
+  force-dns-mapping: true
+  parse-pure-ip: true
   sniff:
     HTTP:
       ports: [80, 8080-8880]
@@ -36,15 +38,22 @@ sniffer:
       ports: [443, 8443]
     QUIC:
       ports: [443, 8443]
+  force-domain:
+    - "+.netflix.com"
+    - "+.nflxvideo.net"
+    - "+.amazonaws.com"
+    - "+.media.dssott.com"
   skip-domain:
+    - "+.apple.com"
     - "Mijia Cloud"
+    - "dlg.io.mi.com"
 
 dns:
   enable: true
   prefer-h3: true
+  enhanced-mode: redir-host
   listen: :1053
   ipv6: true
-  enhanced-mode: redir-host
   nameserver:
     - https://223.5.5.5/dns-query
   nameserver-policy:
@@ -59,7 +68,7 @@ proxy-groups:
   - {name: Telegram, <<: *pr}
   - {name: Google, <<: *pr}
   - {name: YouTube, <<: *pr}
-  - {name: Tracker, <<: *pr}
+  - {name: Tracker, type: select, proxies: [DIRECT, 🇭🇰 香港, 🇼🇸 台湾, 🇯🇵 日本, 🇸🇬 新加坡, 🇺🇸 美国]}
   - {name: 流媒体, <<: *pr}
   - {name: Porns, <<: *pr}
   - {name: Bilibili, type: select, proxies: [DIRECT, 🇭🇰 香港, 🇼🇸 台湾]}
@@ -105,8 +114,8 @@ rules:
   - MATCH,MATCH
 
 rule-anchor:
-  ip: &ip {type: http, interval: 86400, behavior: ipcidr, format: text}
-  domain: &domain {type: http, interval: 86400, behavior: domain, format: text}
+  ip: &ip {type: http, interval: 86400, behavior: ipcidr, format: yaml}
+  domain: &domain {type: http, interval: 86400, behavior: domain, format: yaml}
 
 # https://wiki.metacubex.one/config/syntax/?h=%E9%80%9A%E9%85%8D%E7%AC%A6#_6
 # https://wiki.metacubex.one/config/rule-providers/content/#__tabbed_2_1
