--- a/config/AIO.yaml
+++ b/config/AIO.yaml
@@ -93,14 +93,15 @@ rules:
   - GEOSITE,tracker,Tracker
   - RULE-SET,custom_proxy,🚀 节点选择
   - GEOSITE,biliintl,🚀 节点选择
-  - RULE-SET,custom_reject,REJECT-DROP
-  - GEOSITE,category-ads-all,REJECT-DROP
+  - RULE-SET,custom_reject,REJECT
+  - RULE-SET,adrules,REJECT
+  - GEOSITE,category-ads-all,REJECT
   - RULE-SET,ai,AI
   - GEOSITE,youtube,YouTube
-  - GEOSITE,google,Google
   - GEOIP,google,Google
-  - GEOSITE,netflix,流媒体
+  - GEOSITE,google,Google
   - GEOIP,netflix,流媒体
+  - GEOSITE,netflix,流媒体
   - GEOSITE,primevideo,流媒体
   - GEOSITE,disney,流媒体
   - GEOSITE,category-porn,Porns
@@ -111,13 +112,13 @@ rules:
   - GEOSITE,microsoft,Microsoft
   - GEOSITE,bahamut,巴哈姆特
   - RULE-SET,emby,Emby
-  - GEOSITE,CN,DIRECT
   - GEOIP,CN,DIRECT
   - MATCH,MATCH
 
 rule-anchor:
   ip: &ip {type: http, interval: 86400, behavior: ipcidr, format: yaml}
   domain: &domain {type: http, interval: 86400, behavior: domain, format: yaml}
+  domaintxt: &domaintxt {type: http, interval: 86400, behavior: domain, format: text}
   classical: &classical {type: http, interval: 86400, behavior: classical, format: text}
 
 # https://wiki.metacubex.one/config/syntax/?h=%E9%80%9A%E9%85%8D%E7%AC%A6#_6
@@ -132,6 +133,9 @@ rule-providers:
   custom_reject:
     <<: *domain
     url: "https://raw.gitmirror.com/JohnsonRan/CRules/master/lists/reject.yaml"
+  adrules:
+    <<: *domaintxt
+    url: "https://adrules.top/adrules_domainset.txt"
   emby:
     <<: *classical
     url: "https://raw.gitmirror.com/Repcz/Tool/X/Surge/Rules/Emby.list"
