--- a/config/AIO.yaml
+++ b/config/AIO.yaml
@@ -118,7 +118,8 @@ rule-anchor:
   ip: &ip {type: http, interval: 86400, behavior: ipcidr, format: yaml}
   domain: &domain {type: http, interval: 86400, behavior: domain, format: yaml}
   domaintxt: &domaintxt {type: http, interval: 86400, behavior: domain, format: text}
-  classical: &classical {type: http, interval: 86400, behavior: classical, format: text}
+  classical: &classical {type: http, interval: 86400, behavior: classical, format: yaml}
+  classicaltxt: &classicaltxt {type: http, interval: 86400, behavior: classical, format: text}
 
 # https://wiki.metacubex.one/config/syntax/#_7
 # https://wiki.metacubex.one/config/rule-providers/content/#rule-providers
@@ -133,11 +134,11 @@ rule-providers:
     <<: *domain
     url: "https://raw.gitmirror.com/JohnsonRan/CRules/master/rules/reject.yaml"
   emby:
-    <<: *classical
+    <<: *classicaltxt
     url: "https://raw.gitmirror.com/Repcz/Tool/X/Surge/Rules/Emby.list"
   ai:
     <<: *classical
-    url: "https://raw.gitmirror.com/EAlyce/conf/main/Rule/OpenAI.list"
+    url: "https://gitlab.com/lodepuly/vpn_tool/-/raw/master/Tool/Clash/Rule/AI.yaml"
   ADs_merged:
     <<: *domaintxt
     url: "https://raw.gitmirror.com/JohnsonRan/CRules/master/rules/ADs_merged.txt"
