add Nexitally DIRECT

--- a/rules/custom.yaml
+++ b/rules/custom.yaml
@@ -10,3 +10,6 @@ payload:
   - "+.gitmirror.com"
   - "+.sharepoint.cn"
   - "+.steamserver.net"
+  - "ehffou.xyz"
+  - "sub.nexconvert.com"
+  - "ieginh.lol"
